<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Furk.net</string>
    <string name="title_section1">My Files</string>
    <string name="title_section2">Downloads</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_download">Download</string>
    <string name="search_label">Furk.net</string>
    <string name="search_hint">Search Furk.net</string>
    <string name="settings_description">This key can be found on https://www.furk.net/t/api</string>
    <string name="settings_title">Settings</string>
    <string name="context_open">Open</string>
    <string name="context_open_browser">Open in browser</string>
    <string name="context_download">Download</string>
    <string name="context_copy_name">Copy name</string>
    <string name="context_link_address">Copy link address</string>
    <string name="context_search_google">Search in Google</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_sort">Sort</string>
    <string name="hello_world">Hello world!</string>
    <string name="sort_cached">Sort by cached</string>
    <string name="sort_relevance">Sort by relevance</string>
    <string name="sort_size">Sort by size</string>
    <string name="sort_size_asc">Sort by size ascendant</string>
    <string name="sort_date">Sort by date</string>
    <string name="sort_date_asc">Sort by date ascendant</string>
    <string name="context_share">Share</string>

</resources>
