<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.simple.furk.FileActivity" >


    <item android:id="@+id/action_download"
        android:title="@string/action_download"
        android:icon="@drawable/ic_action_download"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_share"
        android:title="Share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always"
        />

    <item android:id="@+id/context_open_browser"
        android:title="@string/context_open_browser"
        app:showAsAction="never"
        />

    <item android:id="@+id/context_search_google"
        android:title="@string/context_search_google"
        app:showAsAction="never"
        />

    <item android:id="@+id/context_copy_name"
        android:title="@string/context_copy_name"
        app:showAsAction="never"
        />

    <item android:id="@+id/context_copy_link"
        android:title="@string/context_link_address"
        app:showAsAction="never"
        />
</menu>